[package]
authors = ["Reinier Balt <lrbalt@gmail.com>"]
edition = "2021"
name = "solar-api"
version = "0.1.0"
description = "Rust library for accessing the SolarEdge Monitoring API"
repository = "https://github.com/lrbalt/solar-api"
documentation = "https://docs.rs/solar-api"
keywords = ["solaredge"]
categories = ["api-bindings"]
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chrono = "0.4.31"
log = "0.4.20"
reqwest = {version = "0.11.22", default-features = false, features = [
  "blocking",
  "rustls-tls",
]}
serde = {version = "1.0.192", features = ["derive"]}
serde_json = "1.0.108"
thiserror = "1.0.50"
uom = {version = "0.35.0", default-features = false, features=["f64", "si"]}
env_logger = "0.10.0"