[package]
authors = ["Reinier Balt <lrbalt@gmail.com>"]
edition = "2021"
name = "solar-api"
version = "0.1.4"
description = "Rust library for accessing the SolarEdge Monitoring API"
repository = "https://github.com/lrbalt/solar-api"
documentation = "https://docs.rs/solar-api"
keywords = ["solaredge"]
categories = ["api-bindings"]
license = "MIT"
readme = "README.md"

[dependencies]
chrono = "0.4.39"
log = "0.4.25"
reqwest = {version = "0.12.12", default-features = false, features = [
  "blocking",
  "rustls-tls",
]}
serde = {version = "1.0.217", features = ["derive"]}
serde_json = "1.0.135"
thiserror = "2.0.11"
uom = {version = "0.36.0", default-features = false, features=["f64", "si"]}
env_logger = "0.11.6"